fix(session11): LIMIT SQL supprimé (17), isBlank/List.of Java8 (15), callout popup, isJourFerie dimanche, creerDE AFTER_NEW, NotifDestinataire nettoyé, getMoyenneSBR12Mois réécrit