@@ -4,10 +4,10 @@ import org.compiere.util.DB;
 import org.sitracel.model.I_HR_Parametre_Numerique;
 
 /**
- * Service transversal — paramètres système RH.
+ * Service transversal - parametres systeme RH.
  *
- * Centralise l'accès aux paramètres numériques configurables
- * définis dans la table HR_Parametre_Numerique.
+ * Centralise l'acces aux parametres numeriques configurables
+ * definis dans la table HR_Parametre_Numerique.
  *
  * Remplace GeneralSqlController.getParametreFromParametreNumerique().
  */
@@ -16,15 +16,18 @@ public final class HRParametreService {
     private HRParametreService() {}
 
     /**
-     * Retourne la valeur entière d'un paramètre système par son nom.
-     * Retourne 0 si le paramètre n'existe pas.
+     * Retourne la valeur entiere d'un parametre systeme par son nom.
+     * Retourne 0 si le parametre n'existe pas.
      *
-     * @param nomParametre Nom exact du paramètre en base
+     * Compatible Java 8 : utilise trim().isEmpty() au lieu de
+     * isBlank() (Java 11+).
+     *
+     * @param nomParametre Nom exact du parametre en base
      */
     public static int getParametreNumerique(String nomParametre) {
-        if (nomParametre == null || nomParametre.isBlank()) {
-			return 0;
-		}
+        if (nomParametre == null || nomParametre.trim().isEmpty()) {
+            return 0;
+        }
 
         String sql = "SELECT " + I_HR_Parametre_Numerique.COLUMNNAME_Valeur_Parametre
             + " FROM " + I_HR_Parametre_Numerique.Table_Name
